# currency-conversion

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: build-pipeline.yaml
application/: database.py  main.py
application/libs/: repository.py
application/migrations/: env.py
application/migrations/versions/: 40ced1c2d0e0_create_currency_conversions_table.py  69fa7fccec6e_change_id_and_user_id_to_uuid_and_.py
infra/k8s/: configmap.yaml  deployment.yaml  service.yaml
libs/: repository.py
src/models/: __init__.py  currency_conversion.py
src/repository/: currency_conversion.py
src/routers/: currency_conversion.py
src/schemas/: currency_conversion.py
src/services/: currency_conversion.py  exchange_rate_client.py
src/tests/integration/services/: test_exchange_rate_client.py
src/tests/unit/services/: test_currency_conversion_service.py
