[tool.poetry]
name = "currency-conversion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
pytest = "^8.3.5"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
taskipy = "^1.14.1"
pytest = "^8.3.5"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
coverage = "^7.8.2"
isort = "^6.0.1"
mypy = "^1.16.0"
alembic = "^1.16.1"

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
test = 'pytest -s -x -vv'

[tool.ruff]
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
